# shortsmith

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_STATE.md  PUBLISH_CHECKLIST.md  README.md  pyproject.toml  run_everything.ps1  setup.ps1  setup.sh
.github/workflows/: ci.yml
assets/sfx/: CATALOG.md  README.txt  index.json
assets/sfx/pack/: pack.json
audio-enhance/: README.md  enhance_batch.py  pyproject.toml
docs/: ARCHITECTURE.md  REMOTION.md  SETUP.md  SFX.md  TROUBLESHOOTING.md  VFX.md
examples/: README.md
prompts/: find_viral_clips.md  gen_broll.md
remotion/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
remotion/src/: BRoll.tsx  Root.tsx  Short.tsx  VFX.tsx  types.ts
scripts/: add_sfx.py  apply_remotion.py  batch_pipeline.py  batch_transcribe.py  build_metricool_payloads.py  build_sfx_index.py  build_sfx_pack.py  check_no_tokens.py  clean_captions.py  finalize.py  format_transcripts.py  gen_broll.py  make_metadata.py  make_thumbnails.py  redo_existing.py  redo_outdated.py  render_all.py  render_remotion.py  reprocess_all.py  smoke_test.py  verify_deliverables.py
shortsmith/: __init__.py  _doctor.py  _wizard.py  align.py  captions.py  checkpoint.py  clean_clips.py  config.py  cut_clips.py  enhance_audio.py  find_clips.py  normalize.py  pipeline.py  reframe.py  scaffold.py  sfx.py  transcribe.py  vfx.py
shortsmith/find_clips/: __init__.py  _common.py  anthropic.py  ollama.py
templates/: callout.html.j2  captions.html.j2  index.html.j2  meta.json.j2
templates/styles/bold/: style.json
templates/styles/minimal/: style.json
templates/styles/xrp-revolution/: style.json
tests/: test_boundary_snap.py  test_caption_helpers.py  test_finalize_args.py  test_gen_broll_http.py  test_normalize.py  test_scaffold_overlays.py  test_sfx.py  test_stutter.py  test_vfx.py
whisperx-align/: README.md  align_batch.py  pyproject.toml
