[project]
name = "shortsmith"
version = "0.1.0"
description = "Long-form video in. Batch of viral Hyperframes-ready 9:16 shorts out."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
keywords = ["video", "shorts", "viral", "podcast", "hyperframes", "whisper", "ffmpeg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper>=1.1.0",
    "anthropic>=0.39.0",
    "opencv-contrib-python>=4.10.0",
    "numpy>=1.26,<2.3",
    "jinja2>=3.1.4",
    "auto-editor>=27.0.0",
    "python-slugify>=8.0.4",
    "tqdm>=4.66.5",
    "click>=8.1.7",
    "soundfile>=0.12.1",
    "librosa>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
shortsmith = "shortsmith.pipeline:main"

[project.urls]
Homepage = "https://github.com/highbaud/shortsmith"
Repository = "https://github.com/highbaud/shortsmith"
Issues = "https://github.com/highbaud/shortsmith/issues"
Changelog = "https://github.com/highbaud/shortsmith/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shortsmith"]

[tool.hatch.build.targets.sdist]
include = [
    "shortsmith",
    "templates",
    "prompts",
    "models",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line-length is enforced separately; some prompts/strings legitimately exceed

[tool.uv]
# Resemble Enhance and DeepFilterNet are intentionally NOT in the base deps —
# they're optional alternative engines with awkward install paths (Resemble pulls
# from GitHub, DeepFilterNet has compiled extensions). The default ClearerVoice
# engine lives in the sibling audio-enhance/ project with its own pyproject.
