[project]
name = "whisperx-align"
version = "0.1.0"
description = "WhisperX forced-alignment worker for shortsmith"
requires-python = ">=3.10,<3.13"
dependencies = [
    "whisperx",
    "soundfile",
    "torch==2.8.0",
    "torchaudio==2.8.0",
]

# Pull torch/torchaudio from the CUDA 12.8 wheel index so `uv sync`/`uv run`
# keep the GPU build instead of resolving the default CPU wheels.
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
